--- a/examples/youtube_bot/main.ipynb
+++ b/examples/youtube_bot/main.ipynb
@@ -24,9 +24,101 @@
    "execution_count": 1,
    "id": "e7b8f4e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  Building wheel for multidict (pyproject.toml) did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [74 lines of output]\n",
+      "  *********************\n",
+      "  * Accelerated build *\n",
+      "  *********************\n",
+      "  running bdist_wheel\n",
+      "  running build\n",
+      "  running build_py\n",
+      "  creating build\n",
+      "  creating build\\lib.win-amd64-cpython-312\n",
+      "  creating build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\_abc.py -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\_compat.py -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\_multidict_base.py -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\_multidict_py.py -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\__init__.py -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  running egg_info\n",
+      "  writing multidict.egg-info\\PKG-INFO\n",
+      "  writing dependency_links to multidict.egg-info\\dependency_links.txt\n",
+      "  writing top-level names to multidict.egg-info\\top_level.txt\n",
+      "  reading manifest file 'multidict.egg-info\\SOURCES.txt'\n",
+      "  reading manifest template 'MANIFEST.in'\n",
+      "  warning: no previously-included files matching '*.pyc' found anywhere in distribution\n",
+      "  warning: no previously-included files found matching 'multidict\\_multidict.html'\n",
+      "  warning: no previously-included files found matching 'multidict\\*.so'\n",
+      "  warning: no previously-included files found matching 'multidict\\*.pyd'\n",
+      "  warning: no previously-included files found matching 'multidict\\*.pyd'\n",
+      "  no previously-included directories found matching 'docs\\_build'\n",
+      "  adding license file 'LICENSE'\n",
+      "  writing manifest file 'multidict.egg-info\\SOURCES.txt'\n",
+      "  C:\\Users\\Lenovo\\AppData\\Local\\Temp\\pip-build-env-7hvw03i5\\overlay\\Lib\\site-packages\\setuptools\\command\\build_py.py:207: _Warning: Package 'multidict._multilib' is absent from the `packages` configuration.\n",
+      "  !!\n",
+      "  \n",
+      "          ********************************************************************************\n",
+      "          ############################\n",
+      "          # Package would be ignored #\n",
+      "          ############################\n",
+      "          Python recognizes 'multidict._multilib' as an importable package[^1],\n",
+      "          but it is absent from setuptools' `packages` configuration.\n",
+      "  \n",
+      "          This leads to an ambiguous overall configuration. If you want to distribute this\n",
+      "          package, please make sure that 'multidict._multilib' is explicitly added\n",
+      "          to the `packages` configuration field.\n",
+      "  \n",
+      "          Alternatively, you can also rely on setuptools' discovery methods\n",
+      "          (for example by using `find_namespace_packages(...)`/`find_namespace:`\n",
+      "          instead of `find_packages(...)`/`find:`).\n",
+      "  \n",
+      "          You can read more about \"package discovery\" on setuptools documentation page:\n",
+      "  \n",
+      "          - https://setuptools.pypa.io/en/latest/userguide/package_discovery.html\n",
+      "  \n",
+      "          If you don't want 'multidict._multilib' to be distributed and are\n",
+      "          already explicitly excluding 'multidict._multilib' via\n",
+      "          `find_namespace_packages(...)/find_namespace` or `find_packages(...)/find`,\n",
+      "          you can try to use `exclude_package_data`, or `include-package-data=False` in\n",
+      "          combination with a more fine grained `package-data` configuration.\n",
+      "  \n",
+      "          You can read more about \"package data files\" on setuptools documentation page:\n",
+      "  \n",
+      "          - https://setuptools.pypa.io/en/latest/userguide/datafiles.html\n",
+      "  \n",
+      "  \n",
+      "          [^1]: For Python, any directory (with suitable naming) can be imported,\n",
+      "                even if it does not contain any `.py` files.\n",
+      "                On the other hand, currently there is no concept of package data\n",
+      "                directory, all directories are treated like packages.\n",
+      "          ********************************************************************************\n",
+      "  \n",
+      "  !!\n",
+      "    check.warn(importable)\n",
+      "  copying multidict\\__init__.pyi -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  copying multidict\\py.typed -> build\\lib.win-amd64-cpython-312\\multidict\n",
+      "  running build_ext\n",
+      "  building 'multidict._multidict' extension\n",
+      "  error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  ERROR: Failed building wheel for multidict\n",
+      "ERROR: Could not build wheels for multidict, which is required to install pyproject.toml-based projects\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install --quiet openai datasets \n",
+    "!pip install --quiet openai==0.28 datasets \n",
     "!pip install --quiet -U lancedb"
    ]
   },
@@ -50,26 +142,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ayushchaurasia/Documents/opensource/vectordb-recipes/vectordb-recipes/env/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Found cached dataset json (/Users/ayushchaurasia/.cache/huggingface/datasets/jamescalam___json/jamescalam--youtube-transcriptions-08d889f6a5386b9b/0.0.0/8bb11242116d547c741b2e8a1f18598ffdd40a1d4f2a2872c7a28b697434bc96)\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'datasets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n\u001b[0;32m      3\u001b[0m data \u001b[38;5;241m=\u001b[39m load_dataset(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjamescalam/youtube-transcriptions\u001b[39m\u001b[38;5;124m'\u001b[39m, split\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m data\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'datasets'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['title', 'published', 'url', 'video_id', 'channel_id', 'id', 'text', 'start', 'end'],\n",
-       "    num_rows: 208619\n",
-       "})"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,78 +171,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "39bbc15e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>published</th>\n",
-       "      <th>url</th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>channel_id</th>\n",
-       "      <th>id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>177622</th>\n",
-       "      <td>$5 MILLION AI for FREE</td>\n",
-       "      <td>2022-08-12 15:18:07</td>\n",
-       "      <td>https://youtu.be/3EjtHs_lXnk</td>\n",
-       "      <td>3EjtHs_lXnk</td>\n",
-       "      <td>UCfzlCWGWYyIQ0aLC5w48gBQ</td>\n",
-       "      <td>3EjtHs_lXnk-t0.0</td>\n",
-       "      <td>Imagine an AI where all in the same model you ...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         title            published  \\\n",
-       "177622  $5 MILLION AI for FREE  2022-08-12 15:18:07   \n",
-       "\n",
-       "                                 url     video_id                channel_id  \\\n",
-       "177622  https://youtu.be/3EjtHs_lXnk  3EjtHs_lXnk  UCfzlCWGWYyIQ0aLC5w48gBQ   \n",
-       "\n",
-       "                      id                                               text  \\\n",
-       "177622  3EjtHs_lXnk-t0.0  Imagine an AI where all in the same model you ...   \n",
-       "\n",
-       "        start   end  \n",
-       "177622    0.0  24.0  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lancedb.context import contextualize\n",
     "\n",
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "169134a0",
    "metadata": {},
    "outputs": [],
@@ -210,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4aef5764",
    "metadata": {},
    "outputs": [],
@@ -232,92 +245,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f5e76fbf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: rate limit only support up to 3.10, proceeding without rate limiter\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlancedb\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlancedb\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membeddings\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m with_embeddings\n\u001b[1;32m----> 4\u001b[0m data \u001b[38;5;241m=\u001b[39m with_embeddings(embed_func, \u001b[43mdf\u001b[49m, show_progress\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      5\u001b[0m data\u001b[38;5;241m.\u001b[39mto_pandas()\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████| 53/53 [18:14<00:00, 20.66s/it]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>published</th>\n",
-       "      <th>url</th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>channel_id</th>\n",
-       "      <th>id</th>\n",
-       "      <th>text</th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "      <th>vector</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>$5 MILLION AI for FREE</td>\n",
-       "      <td>2022-08-12 15:18:07</td>\n",
-       "      <td>https://youtu.be/3EjtHs_lXnk</td>\n",
-       "      <td>3EjtHs_lXnk</td>\n",
-       "      <td>UCfzlCWGWYyIQ0aLC5w48gBQ</td>\n",
-       "      <td>3EjtHs_lXnk-t0.0</td>\n",
-       "      <td>Imagine an AI where all in the same model you ...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>[-0.02471072, -0.0009574045, 0.017724302, -0.0...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    title            published                           url  \\\n",
-       "0  $5 MILLION AI for FREE  2022-08-12 15:18:07  https://youtu.be/3EjtHs_lXnk   \n",
-       "\n",
-       "      video_id                channel_id                id  \\\n",
-       "0  3EjtHs_lXnk  UCfzlCWGWYyIQ0aLC5w48gBQ  3EjtHs_lXnk-t0.0   \n",
-       "\n",
-       "                                                text  start   end  \\\n",
-       "0  Imagine an AI where all in the same model you ...    0.0  24.0   \n",
-       "\n",
-       "                                              vector  \n",
-       "0  [-0.02471072, -0.0009574045, 0.017724302, -0.0...  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
