--- a/examples/RAG_Fusion/main.ipynb
+++ b/examples/RAG_Fusion/main.ipynb
@@ -18,11 +18,7 @@
    "outputs": [],
    "source": [
     "# Installing the required dependencies\n",
-    "!pip install langchain\n",
-    "!pip install openai\n",
-    "!pip install lancedb\n",
-    "!pip install pypdf\n",
-    "!pip install tiktoken"
+    "!pip install langchain openai lancedb pypdf tiktoken"
    ]
   },
   {
