--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qq openai langchain tiktoken unstructured\n",
+    "!pip install -qq openai==0.28 langchain tiktoken unstructured\n",
     "!pip install -qq lancedb"
    ]
   },
