improve setup cell

--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -5,11 +5,11 @@
    "id": "13cb272e",
    "metadata": {},
    "source": [
-    "# Code documentation Q&A bot example with LangChain\r",
-    "![picture](https://lancedb.github.io/lancedb/assets/ecosystem-illustration.png)\r\n",
-    "\r\n",
-    "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API.\r\n",
-    "\r\n",
+    "# Code documentation Q&A bot example with LangChain\n",
+    "![picture](https://lancedb.github.io/lancedb/assets/ecosystem-illustration.png)\n",
+    "\n",
+    "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API.\n",
+    "\n",
     "In this example we'll **Numpy 1.26** 2.0 documentation, but, this could be replaced for your own docs as well"
    ]
   },
@@ -23,13 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "66638d6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qq openai==0.28 langchain tiktoken unstructured\n",
-    "!pip install -qq lancedb"
+    "!pip install -qq openai==0.28 langchain==0.0.354 tiktoken unstructured pandas lancedb"
    ]
   },
   {
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "58ee1868",
    "metadata": {},
    "outputs": [],
@@ -51,7 +50,7 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"sk-\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
     "\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
@@ -65,7 +64,7 @@
    "id": "34f524d3",
    "metadata": {},
    "source": [
-    "\r\n",
+    "\n",
     "We're going to use the power of LangChain to help us create our Q&A bot. It comes with several APIs that can make our development much easier as well as a LanceDB integration for vectorstore."
    ]
   },
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "b55d22f1",
    "metadata": {},
    "outputs": [],
@@ -104,7 +103,8 @@
    "id": "56cc6d50",
    "metadata": {},
    "source": [
-    "To make this easier, we've downloaded Pandas documentation and stored the raw HTML files for you to download. We'll download them and then use LangChain's HTML document readers to parse them and store them in LanceDB as a vector store, along with relevant metadata."
+    "To make this easier, we've downloaded Pandas documentation and stored the raw HTML files for you to download. We'll download them and then use LangChain's HTML document readers to parse them and store them in LanceDB as a vector store, along with relevant metadata. \n",
+    "By default we'll use numpy docs as it is much smaller than pandas docs, but you can replace this with your own docs as well."
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "7da77e75",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "d171d062",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "f5f683a7-123b-4e9e-a60b-115bc1340a66",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "c019d728-bb65-494a-b4a9-73a62bf8e155",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "2699"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "82230563",
    "metadata": {},
    "outputs": [],
@@ -332,17 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "70d88316",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' NumPy is the fundamental package for scientific computing in Python. It provides a multidimensional array object, various derived objects (such as masked arrays and matrices), and an assortment of routines for fast operations on arrays, including mathematical, logical, shape manipulation, sorting, selecting, I/O, discrete Fourier transforms, basic linear algebra, basic statistical operations, random simulation and much more.'"
+       "' The NumPy library is an open source Python library that is used in many fields of science and engineering. It provides efficient data structures for multidimensional arrays and matrices, along with a vast array of mathematical functions to operate on them. It is a core component of the scientific Python and PyData ecosystems, and is used by everyone from beginners to experienced researchers in various applications. It is also interoperable with other Python libraries such as SciPy, Pandas, and OpenCV, making it a crucial tool for scientific computing in Python. '"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,17 +354,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "85a0397c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' The current version of numpy is 1.26.'"
+       "'\\n\\n1.22.0'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,17 +376,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "923f86c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' numpy has linear algebra operations such as matrix_power(), matrix_rank(), multi_dot(), norm(), pinv(), qr(), slogdet(), solve(), svd(), tensorinv(), tensorsolve().'"
+       "' Linear algebra operations can be performed using the numpy.linalg library.'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,6 +403,12 @@
    "source": [
     "Thanks"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a53efb",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -421,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
