--- a/examples/Advanced-RAG-with-FLARE/main.ipynb
+++ b/examples/Advanced-RAG-with-FLARE/main.ipynb
@@ -414,9 +414,9 @@
     }
    ],
    "source": [
-    "!pip install openai\n",
+    "!pip install openai==0.28\n",
     "!pip install lancedb\n",
-    "!pip install langchain\n",
+    "!pip install langchain==0.0.354\n",
     "!pip install openai\n",
     "!pip install tiktoken\n",
     "!pip install sentence_transformers\n",
