movie recommender notebook update

--- a/examples/movie-recommender/lancedb_cloud/main.ipynb
+++ b/examples/movie-recommender/lancedb_cloud/main.ipynb
@@ -29,7 +29,7 @@
       },
       "outputs": [],
       "source": [
-        "project_slug = \"test\" # @param {type:\"string\"}"
+        "project_slug = \"your-project-slug\" # @param {type:\"string\"}"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "api_key = \"sk_...\" # @param {type:\"string\"}"
+        "api_key = \"sk_...\" # @param {type:\"string\"}!"
       ]
     },
     {
@@ -2586,9 +2586,10 @@
         }
       ],
       "source": [
-        "# connect to LanceDB Cloud with previously set credentials\n",
+        "# you can simply replace the following line from the code copied from the dashboard\n",
+        "# or substitute  with your project/api key\n",
         "uri = \"db://\" + project_slug\n",
-        "db = lancedb.connect(uri, api_key=api_key, region=\"us-east-1\")\n",
+        "db = lancedb.connect(uri, api_key=api_key, region=\"us-east-1-dev\")\n",
         "try:\n",
         "    table = db.create_table(\"movie_set\", data=data)\n",
         "except:\n",
