add the product recommender example back for saas

--- a/examples/movie-recommender/lancedb_cloud/main.ipynb
+++ b/examples/movie-recommender/lancedb_cloud/main.ipynb
@@ -2589,7 +2589,7 @@
         "# you can simply replace the following line from the code copied from the dashboard\n",
         "# or substitute  with your project/api key\n",
         "uri = \"db://\" + project_slug\n",
-        "db = lancedb.connect(uri, api_key=api_key, region=\"us-east-1-dev\")\n",
+        "db = lancedb.connect(uri, api_key=api_key, region=\"us-east-1\")\n",
         "try:\n",
         "    table = db.create_table(\"movie_set\", data=data)\n",
         "except:\n",
@@ -2702,15 +2702,6 @@
         "\n",
         "Of course, this won't be completely accurate. There are other ways improve the accuracy, such as `reducing the dimensions` of the original data, or filtering out users/movies with few ratings. But this is a good start to building a movie recommender system."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3iTqwDNQ9WtD"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
