--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This Q&A bot will allow you to query your own documentation easily using questions. We'll also demonstrate the use of LangChain and LanceDB using the OpenAI API.\n",
     "\n",
-    "In this example we'll **Numpy 1.26** 2.0 documentation, but, this could be replaced for your own docs as well"
+    "In this example we'll **Numpy 1.26** documentation, but, this could be replaced for your own docs as well"
    ]
   },
   {
@@ -50,7 +50,7 @@
     "import os\n",
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
