--- a/tutorials/different-types-text-chunking-in-RAG/Text_Chunking_on_RAG_application_with_LanceDB.ipynb
+++ b/tutorials/different-types-text-chunking-in-RAG/Text_Chunking_on_RAG_application_with_LanceDB.ipynb
@@ -1,23 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "yzGy7Oi-EoNo"
+      },
       "source": [
         "## Retrieval Augmented Generation with LanceDB  \n",
         "\n",
@@ -27,13 +14,13 @@
         "This will allow us to ask questions about our documents (that were not included in the training data), without fine-tunning the Large Language Model (LLM).\n",
         "\n",
         "Here Text Splitting will help LLM to give accurate answers without hallucination.\n"
-      ],
-      "metadata": {
-        "id": "yzGy7Oi-EoNo"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ENgV8B98FP37"
+      },
       "source": [
         "## What is a Retrieval Augmented Generation (RAG) system?\n",
         "\n",
@@ -45,10 +32,7 @@
         "The orchestration of the retriever and generator will be done using Langchain. A specialized function from Langchain allows us to create the receiver-generator in one line of code.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "ENgV8B98FP37"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -62,8 +46,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.10/dist-packages (4.34.1)\n",
             "Requirement already satisfied: accelerate in /usr/local/lib/python3.10/dist-packages (0.23.0)\n",
@@ -147,6 +131,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tfb94kwvLtU1"
+      },
+      "outputs": [],
       "source": [
         "#imports\n",
         "\n",
@@ -162,20 +151,11 @@
         "from langchain.embeddings import HuggingFaceEmbeddings\n",
         "from langchain.chains import RetrievalQA\n",
         "from langchain.vectorstores import LanceDB"
-      ],
-      "metadata": {
-        "id": "tfb94kwvLtU1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Dataset(in txt format)\n",
-        "\n",
-        "!wget https://gist.githubusercontent.com/PrashantDixit-dev/10fd4ab8a7d0d37de361af2a06ecfbe2/raw/indianEconomy.txt"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -183,43 +163,57 @@
         "id": "NGvhj6XWI2YV",
         "outputId": "4ea9aa3d-3492-47f2-864b-75db252ecbe1"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "--2023-10-24 03:48:41--  https://gist.githubusercontent.com/PrashantDixit-dev/10fd4ab8a7d0d37de361af2a06ecfbe2/raw/indianEconomy.txt\n",
-            "Resolving gist.githubusercontent.com (gist.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to gist.githubusercontent.com (gist.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2024-01-25 01:04:50--  https://gist.githubusercontent.com/PrashantDixit0/10fd4ab8a7d0d37de361af2a06ecfbe2/raw/indianEconomy.txt\n",
+            "Resolving gist.githubusercontent.com (gist.githubusercontent.com)... "
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "64:ff9b::b9c7:6c85, 64:ff9b::b9c7:6d85, 64:ff9b::b9c7:6e85, ...\n",
+            "Connecting to gist.githubusercontent.com (gist.githubusercontent.com)|64:ff9b::b9c7:6c85|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2620 (2.6K) [text/plain]\n",
             "Saving to: ‘indianEconomy.txt’\n",
             "\n",
-            "\rindianEconomy.txt     0%[                    ]       0  --.-KB/s               \rindianEconomy.txt   100%[===================>]   2.56K  --.-KB/s    in 0s      \n",
+            "indianEconomy.txt   100%[===================>]   2.56K  --.-KB/s    in 0s      \n",
             "\n",
-            "2023-10-24 03:48:41 (46.3 MB/s) - ‘indianEconomy.txt’ saved [2620/2620]\n",
+            "2024-01-25 01:04:51 (11.4 MB/s) - ‘indianEconomy.txt’ saved [2620/2620]\n",
             "\n"
           ]
         }
+      ],
+      "source": [
+        "#Dataset(in txt format)\n",
+        "\n",
+        "!wget https://gist.githubusercontent.com/PrashantDixit0/10fd4ab8a7d0d37de361af2a06ecfbe2/raw/indianEconomy.txt"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8IoDr-jZJFVm"
+      },
+      "outputs": [],
       "source": [
         "#load data\n",
         "\n",
         "dataloader = TextLoader(\"indianEconomy.txt\",encoding=\"utf8\")\n",
         "documents = dataloader.load()"
-      ],
-      "metadata": {
-        "id": "8IoDr-jZJFVm"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sh05Xli7MJMh"
+      },
       "source": [
         "## Text Chunking\n",
         "\n",
@@ -230,61 +224,63 @@
         "Here you can try out different Text Spplitting Strategies according to your data and Tips and Tricks discussed in Blog.\n",
         "\n",
         "For Now, we are going to use Recursive Text Splitting using LangChain"
-      ],
-      "metadata": {
-        "id": "sh05Xli7MJMh"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "recursive_text_splitter = RecursiveCharacterTextSplitter(chunk_size=10000, chunk_overlap=200)\n",
-        "all_splits = recursive_text_splitter.split_documents(documents)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "r0om7g1nMEOk"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "recursive_text_splitter = RecursiveCharacterTextSplitter(chunk_size=10000, chunk_overlap=200)\n",
+        "all_splits = recursive_text_splitter.split_documents(documents)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DxqPNUpgNprN"
+      },
       "source": [
         "## Embeddings Generator\n",
         "\n",
         "Creating embeddings using Sentence Transformer with HuggingFace embeddings."
-      ],
-      "metadata": {
-        "id": "DxqPNUpgNprN"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UCuE42JMNmrz"
+      },
+      "outputs": [],
       "source": [
         "model_name = \"sentence-transformers/all-mpnet-base-v2\"\n",
         "model_kwargs = {\"device\": \"cuda\"}\n",
         "\n",
         "embeddings = HuggingFaceEmbeddings(model_name=model_name, model_kwargs=model_kwargs)"
-      ],
-      "metadata": {
-        "id": "UCuE42JMNmrz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_Og-UmALOYwV"
+      },
       "source": [
         "## LanceDB for vector storage and searching\n",
         "\n",
         "Initialize LanceDB with the Recursive Text Chunking, the *embeddings*   Sentence Transformer object will be used for extract embeddings from all the text splits"
-      ],
-      "metadata": {
-        "id": "_Og-UmALOYwV"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vqO6knYcOe1K"
+      },
+      "outputs": [],
       "source": [
         "db = lancedb.connect(\"/tmp/lancedb\")\n",
         "table = db.create_table(\n",
@@ -300,24 +296,22 @@
         ")\n",
         "\n",
         "vectordb = LanceDB.from_documents(documents, embeddings, connection=table)"
-      ],
-      "metadata": {
-        "id": "vqO6knYcOe1K"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Initialize RAG Chain\n"
-      ],
       "metadata": {
         "id": "zBW-Yp7mPxQY"
-      }
+      },
+      "source": [
+        "## Initialize RAG Chain\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Aa95aAbP6ukc"
+      },
       "source": [
         "## Chat Models\n",
         "\n",
@@ -325,25 +319,27 @@
         "\n",
         "Refer to LangChain, There are few Chat Models which can be used as Chat model to generate answers in RAG.\n",
         "https://python.langchain.com/docs/integrations/chat/"
-      ],
-      "metadata": {
-        "id": "Aa95aAbP6ukc"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain.chat_models import ChatOpenAI\n",
-        "llm = ChatOpenAI(temperature=0, openai_api_key=\"YOUR_API_KEY\", openai_organization=\"YOUR_ORGANIZATION_ID\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-3oNrEEZy6qe"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain.chat_models import ChatOpenAI\n",
+        "llm = ChatOpenAI(temperature=0, openai_api_key=\"YOUR_API_KEY\", openai_organization=\"YOUR_ORGANIZATION_ID\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zdhU5x1aPwma"
+      },
+      "outputs": [],
       "source": [
         "#Retreiver\n",
         "retriever = vectordb.as_retriever()\n",
@@ -354,15 +350,15 @@
         "    retriever=retriever,\n",
         "    verbose=True\n",
         ")"
-      ],
-      "metadata": {
-        "id": "zdhU5x1aPwma"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8XxQSWUHOiPG"
+      },
+      "outputs": [],
       "source": [
         "#Results of RAG\n",
         "\n",
@@ -371,21 +367,32 @@
         "result = qa({\"query\": query})\n",
         "\n",
         "print(result)"
-      ],
-      "metadata": {
-        "id": "8XxQSWUHOiPG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "38mCzmLN0c1G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
