Fixing installation for prompttools example

--- a/examples/prompttools-eval-prompts/main.ipynb
+++ b/examples/prompttools-eval-prompts/main.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools lancedb"
+    "!pip install --quiet --force-reinstall prompttools lancedb sentence_transformers"
    ]
   },
   {
